export collada crash - if you set a keyframe #38366

Closed
opened 2014-01-25 20:42:37 +01:00 by r boerdijk · 8 comments

OSX 10.8, mbp 2010 w 8 GB, NVidia GT330M

Blender 2.69 r60991

I have a scene which I can export with collada (default settings + export material-textures, include uv textures). However, if I press "i" and "position" to insert a keyframe, and then try to export it as collada, blender crashes.

scene is attached ( original from blendswap, 'blade runner suitcase' - but slightly modified e.g. material-textures/filesnames ).

brunner_case.zip

OSX 10.8, mbp 2010 w 8 GB, NVidia GT330M Blender 2.69 r60991 I have a scene which I can export with collada (default settings + export material-textures, include uv textures). However, if I press "i" and "position" to insert a keyframe, and then try to export it as collada, blender crashes. scene is attached ( original from blendswap, 'blade runner suitcase' - but slightly modified e.g. material-textures/filesnames ). [brunner_case.zip](https://archive.blender.org/developer/F75403/brunner_case.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kalmiya

Added subscriber: @kalmiya
Author

//find keyframes of all the objects animations
void AnimationExporter::find_frames(Object *ob, std::vector &fra)
{
FCurve *fcu = (FCurve *)ob->adt->action->curves.first;

      ...

}

where adt = NULL

//find keyframes of all the objects animations void AnimationExporter::find_frames(Object *ob, std::vector<float> &fra) { FCurve *fcu = (FCurve *)ob->adt->action->curves.first; ``` ... ``` } where adt = NULL

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bb83bdf891.

Closed by commit bb83bdf891.

This issue was referenced by blender/blender-addons-contrib@bb83bdf891

This issue was referenced by blender/blender-addons-contrib@bb83bdf89123690e99ef36afd24a93246685dc68

This issue was referenced by bb83bdf891

This issue was referenced by bb83bdf89123690e99ef36afd24a93246685dc68

Added subscriber: @mont29

Added subscriber: @mont29
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38366
No description provided.