Fix T38366: export collada crash - if you set a keyframe

Don't assume all objects have a valid animdata...